--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         padding: 0;
     }
     </style>
-    <link href=/static/css/app.1918aa4420e322b63947f5a98f89b942.css rel=stylesheet>
+    <link href=static/css/app.1918aa4420e322b63947f5a98f89b942.css rel=stylesheet>
 </head>
 <base href="/tcmall/">
 <body>
     <div id=app></div>
-    <script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
-    <script type=text/javascript src=/static/js/vendor.100e41279a57d03dba66.js></script>
-    <script type=text/javascript src=/static/js/app.65aeac466d7c5edd8d70.js></script>
+    <script type=text/javascript src=static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
+    <script type=text/javascript src=static/js/vendor.100e41279a57d03dba66.js></script>
+    <script type=text/javascript src=static/js/app.65aeac466d7c5edd8d70.js></script>
 </body>
 
 </html>
